# CloudMeeting

./: README.md
CloudMeetingClient/: AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioOutput.h  CloudMeetingClient.sln  CloudMeetingClient.vcxproj  CloudMeetingClient.vcxproj.filters  MyVideoSurface.cpp  MyVideoSurface.h  NetHeader.cpp  NetHeader.h  Partner.cpp  Partner.h  README.md  RecvDeal.cpp  RecvDeal.h  SendImg.cpp  SendImg.h  SendText.cpp  SendText.h  TcpSock.cpp  TcpSock.h  Widget.cpp  Widget.h  Widget.qrc  Widget.ui  login.cpp  login.h  login.ui  main.cpp  register.cpp  register.h  register.ui
CloudMeetingServer/: CMakeLists.txt  CloudMeetingServer  README.md  main.cpp
CloudMeetingServer/Base/: address.h  callback.h  mutex.h
CloudMeetingServer/Server/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Connection.cpp  Connection.h  EventLoop.h  Server.cpp  Server.h
CloudMeetingServer/TcpServer/: MsgDef.h  TcpServer.cpp  TcpServer.h
client_exe/: README.md
