cmake_minimum_required(VERSION 3.5)
project(CloudMeetingServer)
include_directories(Base TcpServer Log Server Timer)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -std=c++11 -pthread")
set(CMAKE_CXX_COMPILE "g++")
aux_source_directory(Base SRC_LIST1)
aux_source_directory(TcpServer SRC_LIST2)
aux_source_directory(Log SRC_LIST3)
aux_source_directory(Server SRC_LIST4)
aux_source_directory(Timer SRC_LIST5)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
add_executable(CloudMeetingServer main.cpp ${SRC_LIST1} ${SRC_LIST2} ${SRC_LIST3} ${SRC_LIST4} ${SRC_LIST5})
target_link_libraries(${PROJECT_NAME} -lmysqlclient)